# k3s_cloudflare_dynamic_ip_updater

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-docker.yaml  quality-control.yml  scan-branches.yaml
cloudflareupdateip/application/: runner.py  user_interface.py
cloudflareupdateip/backend/: model.py
cloudflareupdateip/tests/cloudflare/: test_cloudflareUpdater.py  test_cloudflare_webservice.py
k8s/: scheduler.yaml
